// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementPage renders engagement report page with data 1`] = `
<Page
  empty={Object {}}
  title="Engagement Report"
>
  <withRouter(Connect(EngagementFilters))
    disabled={false}
    onLoad={[Function]}
  />
  <If
    condition={false}
  >
    <PanelLoading />
  </If>
  <If
    condition={true}
  >
    <Panel
      sectioned={true}
    >
      <LoadableComponent
        accepted={1}
        clicks={3}
        opens={4}
        targeted={2}
      />
    </Panel>
  </If>
</Page>
`;

exports[`EngagementPage renders loading panel 1`] = `
<Page
  empty={Object {}}
  title="Engagement Report"
>
  <withRouter(Connect(EngagementFilters))
    disabled={true}
    onLoad={[Function]}
  />
  <If
    condition={true}
  >
    <PanelLoading />
  </If>
  <If
    condition={false}
  >
    <Panel
      sectioned={true}
    >
      <LoadableComponent />
    </Panel>
  </If>
</Page>
`;
